test/errors/type/str/count3.yasl
mt.lookup('', .count)(.str, true)
